kubernetes/apps/forgejo/middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forgejo-deny
  namespace: forgejo
spec:
  ipAllowList:
    sourceRange:
      - "127.0.0.1/32" # no matches
