kubernetes/apps/forgejo/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo
  namespace: forgejo
  annotations:
    external-dns.alpha.kubernetes.io/provider: cloudflare
    external-dns.alpha.kubernetes.io/hostname: forgejo.dmhosted.com
    external-dns.alpha.kubernetes.io/target: b8f93036-6de6-4d1c-a590-bdbf64f990ad.cfargotunnel.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    # NOTE: metrics can only be scraped from ServiceMonitor (point at
    # forgejo-http svc)
    - match: Host(`forgejo.dmhosted.com`) && PathPrefix(`/metrics`)
      kind: Rule
      priority: 200
      middlewares:
        - name: forgejo-deny
      services: # not used
        - name: forgejo-http
          port: 3000
    - match: Host(`forgejo.dmhosted.com`)
      kind: Rule
      services:
        - name: forgejo-http
          port: 3000
  tls:
    secretName: forgejo-cert
